--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,44 @@
+# Ignore files for .NET projects
 **/bin/
 **/obj/
+**/TestResults/
+*.user
+*.suo
+*.userosscache
+*.sln.docstates
+.vs/
+
+# Ignore files for Node and Angular projects
+node_modules/
+dist/
+tmp/
+out-tsc/
+bazel-out/
+.angular/
+coverage/
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE settings
+.idea/
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/
+
+# Misc
+.sass-cache/
+connect.lock
+libpeerconnection.log
+typings/
+.DS_Store
+Thumbs.db
